# python-gnocchiclient

./: .coveragerc  .gitignore  .gitreview  .mailmap  .testr.conf  .travis.yml  CONTRIBUTING.rst  HACKING.rst  README  README.rst  openstack-common.conf  requirements.txt  setup-tests.sh  setup.cfg  test-requirements.txt  tox.ini
doc/source/: api.rst  conf.py  index.rst  installation.rst  shell.rst  usage.rst
gnocchiclient/: __init__.py  auth.py  benchmark.py  client.py  exceptions.py  gendoc.py  i18n.py  noauth.py  osc.py  shell.py  utils.py  version.py
gnocchiclient/tests/: test_gnocchiclient.py
gnocchiclient/tests/functional/: base.py  test_archive_policy.py  test_archive_policy_rule.py  test_benchmark.py  test_capabilities.py  test_metric.py  test_resource.py  test_resource_type.py  test_shell.py  test_status.py
gnocchiclient/tests/unit/: test_auth.py  test_exceptions.py  test_utils.py
gnocchiclient/v1/: archive_policy.py  archive_policy_cli.py  archive_policy_rule.py  archive_policy_rule_cli.py  archivepolicy.py  archivepolicycli.py  archivepolicyrule.py  archivepolicyrulecli.py  base.py  capabilities.py  capabilities_cli.py  client.py  metric.py  metric_cli.py  resource.py  resource_cli.py  resource_type.py  resource_type_cli.py  resourcecli.py  shell.py  status.py  status_cli.py
