[metadata]
name = gnocchiclient
summary = Python client library for Gnocchi
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    gnocchiclient

[entry_points]
console_scripts =
    gnocchi = gnocchiclient.shell:main

keystoneauth1.plugin =
    gnocchi-noauth = gnocchiclient.noauth:GnocchiNoAuthLoader

[extras]
test =
  coverage>=3.6
  python-subunit>=0.0.18
  oslotest>=1.10.0 # Apache-2.0
  tempest-lib>=0.6.1
  testrepository>=0.0.18
  testtools>=1.4.0

doc =
  sphinx!=1.2.0,!=1.3b1,>=1.1.2
  oslosphinx>=2.5.0 # Apache-2.0


[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = gnocchiclient/locale
domain = gnocchiclient

[update_catalog]
domain = gnocchiclient
output_dir = gnocchiclient/locale
input_file = gnocchiclient/locale/gnocchiclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = gnocchiclient/locale/gnocchiclient.pot

[wheel]
universal = 1
