[metadata]
name = gnocchiclient
summary = Python client library for Gnocchi
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/python-gnocchiclient/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    gnocchiclient

[entry_points]
console_scripts =
    gnocchi = gnocchiclient.shell:main

keystoneauth1.plugin =
    gnocchi-noauth = gnocchiclient.auth:GnocchiNoAuthLoader
    gnocchi-basic = gnocchiclient.auth:GnocchiBasicLoader

openstack.cli.extension =
    metric = gnocchiclient.osc

openstack.metric.v1 =
    # FIXME(sileht): don't duplicate entry with the one in shell.py
    metric_status = gnocchiclient.v1.status_cli:CliStatusShow
    metric_resource_list = gnocchiclient.v1.resource_cli:CliResourceList
    metric_resource_show = gnocchiclient.v1.resource_cli:CliResourceShow
    metric_resource_history = gnocchiclient.v1.resource_cli:CliResourceHistory
    metric_resource_search = gnocchiclient.v1.resource_cli:CliResourceSearch
    metric_resource_create = gnocchiclient.v1.resource_cli:CliResourceCreate
    metric_resource_update = gnocchiclient.v1.resource_cli:CliResourceUpdate
    metric_resource_delete = gnocchiclient.v1.resource_cli:CliResourceDelete
    metric_resource_batch_delete = gnocchiclient.v1.resource_cli:CliResourceBatchDelete
    metric_resource-type_list = gnocchiclient.v1.resource_type_cli:CliResourceTypeList
    metric_resource-type_create = gnocchiclient.v1.resource_type_cli:CliResourceTypeCreate
    metric_resource-type_show = gnocchiclient.v1.resource_type_cli:CliResourceTypeShow
    metric_resource-type_update = gnocchiclient.v1.resource_type_cli:CliResourceTypeUpdate
    metric_resource-type_delete = gnocchiclient.v1.resource_type_cli:CliResourceTypeDelete
    metric_archive-policy_list = gnocchiclient.v1.archive_policy_cli:CliArchivePolicyList
    metric_archive-policy_show = gnocchiclient.v1.archive_policy_cli:CliArchivePolicyShow
    metric_archive-policy_create = gnocchiclient.v1.archive_policy_cli:CliArchivePolicyCreate
    metric_archive-policy_delete = gnocchiclient.v1.archive_policy_cli:CliArchivePolicyDelete
    metric_archive-policy-rule_list = gnocchiclient.v1.archive_policy_rule_cli:CliArchivePolicyRuleList
    metric_archive-policy-rule_show = gnocchiclient.v1.archive_policy_rule_cli:CliArchivePolicyRuleShow
    metric_archive-policy-rule_create = gnocchiclient.v1.archive_policy_rule_cli:CliArchivePolicyRuleCreate
    metric_archive-policy-rule_delete = gnocchiclient.v1.archive_policy_rule_cli:CliArchivePolicyRuleDelete
    # FIXME(rabel): Deprecate metric_metric entry points
    metric_metric_list = gnocchiclient.v1.metric_cli:CliMetricList
    metric_metric_show = gnocchiclient.v1.metric_cli:CliMetricShow
    metric_metric_create = gnocchiclient.v1.metric_cli:CliMetricCreate
    metric_metric_delete = gnocchiclient.v1.metric_cli:CliMetricDelete
    metric_list = gnocchiclient.v1.metric_cli:CliMetricList
    metric_show = gnocchiclient.v1.metric_cli:CliMetricShow
    metric_create = gnocchiclient.v1.metric_cli:CliMetricCreate
    metric_delete = gnocchiclient.v1.metric_cli:CliMetricDelete
    metric_measures_show = gnocchiclient.v1.metric_cli:CliMeasuresShow
    metric_measures_add = gnocchiclient.v1.metric_cli:CliMeasuresAdd
    metric_measures_batch-metrics = gnocchiclient.v1.metric_cli:CliMetricsMeasuresBatch
    metric_measures_batch-resources-metrics = gnocchiclient.v1.metric_cli:CliResourcesMetricsMeasuresBatch
    metric_measures aggregation = gnocchiclient.v1.metric_cli:CliMeasuresAggregation
    metric_capabilities list = gnocchiclient.v1.capabilities_cli:CliCapabilitiesList
    metric_benchmark metric create = gnocchiclient.benchmark:CliBenchmarkMetricCreate
    metric_benchmark metric show = gnocchiclient.benchmark:CliBenchmarkMetricShow
    metric_benchmark measures add = gnocchiclient.benchmark:CliBenchmarkMeasuresAdd
    metric_benchmark measures show = gnocchiclient.benchmark:CliBenchmarkMeasuresShow

[extras]
test =
  coverage>=3.6
  python-subunit>=0.0.18
  oslotest>=1.10.0 # Apache-2.0
  tempest>=10
  testrepository>=0.0.18
  testtools>=1.4.0

doc =
  doc8
  sphinx!=1.2.0,!=1.3b1,>=1.1.2
  oslosphinx>=2.5.0 # Apache-2.0
  openstack-doc-tools>=1.0.1


[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[pbr]
autodoc_index_modules = true
autodoc_exclude_modules =
  gnocchiclient.tests.*

[wheel]
universal = 1
